<resources>
    <string name="app_name">Sathi</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="forgot_password_text">Forgot Password</string>
    <string name="sign_up_text">Don\'t have an Account?</string>
    <string name="sign_up_link_text"> Sign Up</string>
    <string name="facebook_btn_text">FACEBOOK</string>
    <string name="twitter_btn_text">TWITTER</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="prompt_full_name">Full Name</string>
    <string name="register_using_label">Or, Register Using</string>
    <string name="google_button_text">GOOGLE</string>
    <string name="prompt_contact">Contact Number</string>
    <string name="action_register">Register Now</string>
    <string name="sign_in_text">Already have an account?</string>
    <string name="sign_in_link_text">Sign In</string>
    <string name="inactive_account_message">Your account has been temporarily shut down, please contact administration</string>
    <string name="disabled_account_message">Your account has been blocked, please contact administration</string>
    <string name="no_connection_error_message">Please check your internet connection and try again</string>
    <string name="username_fill_text">Please fill Username</string>
    <string name="password_fill_text">Please fill password</string>
    <string name="name_fill_text">Please enter your full name</string>
    <string name="contat_fill_text">Please enter contact number</string>
    <string name="logout">Logout</string>
    <string name="logout_title">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="exit_application_message">You will be exited from the application…</string>
    <string name="exit_application_title">Are you sure?</string>
    <string name="buy_gift_voucher">Buy Card Voucher</string>
    <string name="city_name">A</string>
    <string name="title_activity_location">locationActivity</string>
    <string name="select_your_city">Select your city</string>
    <string name="city_name_label">Enter city name</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_gift_card_button_text">Buy Gift Cards</string>
    <string name="title_activity_stores">StoresActivity</string>
    <string name="recharge">Recharge</string>
    <string name="title_activity_store_inner">StoreInnerActivity</string>
    <string name="title_activity_property_type">PropertyTypeActivity</string>
    <string name="property_buy_tag">Buy</string>
    <string name="property_sell_tag">Sell</string>
    <string name="property_rent_tag">Rent</string>
    <string name="title_activity_property_inner">PropertyInnerActivity</string>
    <string name="current_location">Current location</string>
    <string name="closebutton">Close button</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="passowrd">password</string>
    <string name="show_pwd">Show Password</string>
    <string name="forgot">Forgot password</string>
    <string name="newUser">New user? sign up here</string>
    <string name="hide_pwd">Hide password</string>
    <string name="signUp">Sign Up</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Contact number</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="terms_conditions">By signing in, you agree to our terms and conditions.</string>
    <string name="already_user">Already a user, Sign in here.</string>
    <string name="registered_emailid">Enter registered email ID</string>
    <string name="back">Back</string>
    <string name="submit">Submit</string>
    <string name="login_button_text">Login</string>
    <string name="title_activity_gift_card">giftCardActivity</string>
    <string name="logout_application_title">Are you sure?</string>
    <string name="logout_application_message">You will be logged out from application.</string>
    <string name="title_activity_services">servicesActivity</string>
    <string name="title_activity_services_inner">servicesInnerActivity</string>
    <string name="contact_address">321, Anand Cloth Market, Sarangpur Bridge, Ahmedabad, Gujarat \n A-10, Karunasagar Complex, near Bus Station, Sathamba, Ta-Bayad District-Aravalli, Gujarat</string>
    <string name="contact_email">myshopee321@gmail.com</string>
    <string name="contact_number1">Arifhusen: +919978088321</string>
    <string name="contact_number2">Rijwan: +917359938585</string>
    <string name="contact_timing">10:00 AM - 7:00 PM\n(Monday - Saturday)</string>
    <string name="contact_title">Contact us</string>
    <string name="about_us_text">To Provide Discounts everywhere My Shopee Counted. The name with the aim of serving world class principles customer satisfaction, innovation and value for money. This My Shopee Discount Card started from Gujarat soon covered a special Place in the heart of it’s users who believes that customer satisfaction is core thing in our operation and service is not just providing them platform so Using Latest Technology. Hop you like our products. Please Feel to contact us if there are any suggestions.</string>
    <string name="about_us_working_text">How It Works-
        As a My Shopee Discount Card Holder all you need to do is Present your card at the billing. Customer each time you make a purchase before billing at any My Shopee Registered Outlasts. Customers can simply get Privileges by Unique Card.</string>
    <string name="coming_soon">Coming Soon…</string>
    <string name="online_stores">Online Stores</string>
    <string name="local_stores">Local Stores</string>
    <string name="gift_card_title">Buy Card</string>
    <string name="title_activity_property_sell">Sell Property</string>
    <string name="et_hint_pname">Name of property</string>
    <string name="et_hint_address">Enter address of property</string>
    <string name="et_hint_city">Enter city</string>
    <string name="et_hint_state">Enter state</string>
    <string name="et_hint_pfeatures">Enter features of property</string>
    <string name="btn_p_image">Image of property</string>
    <string name="sell">Sell</string>
    <string name="rent">Rent</string>
    <string name="property_for">Property for</string>
    <string name="price_for_sell">Price for sell</string>
    <string name="price_for_rent">Price for rent</string>
    <string name="your_property">Your Property</string>
    <string name="personal_details">Personal Details</string>
    <string name="address_details">Address Details</string>
    <string name="property_details">Property Details</string>
    <string name="img_text">Select an Image</string>
    <string name="tnc_header">I accept all</string>
    <string name="our_terms_and_conditions"> Terms and Conditions</string>
    <string name="ending">Ending</string>
    <string name="properties">Properties</string>
    <string name="services">Services</string>
    <string name="stores">Stores</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="all_terms_1">1. My Shopee card is valid for 1 year from the date of purchase.</string>
    <string name="all_terms_2">  2. My Shopee discount card user must present the My Shopee discount card to the cashier at the time of purchase before commencement of billing to avail discount and other benefits.</string>
    <string name="all_terms_3">  3. My Shopee reserves the right to terminate the offers at its own discretion, if deemed necessary.</string>
    <string name="all_terms_4">  4. Benefits available through program partners may change from time to time or be withdrawn without prior notice. The customer would be bond by such changes; My Shopee will not be responsible for any liabilities arising out of such situations.</string>
    <string name="all_terms_5">5. My Shopee at any time without giving notice change, modify and/ or vary the terms and conditions of My Shopee offer discount card program.</string>
    <string name="all_terms_6">6. The card is only valid for Bonafide purchase for personal and family use and will not be allowed on goods purchase for resale.</string>
    <string name="all_terms_7">7. Any duplication of this card will be subject to cancellation of both cards.</string>
    <string name="all_terms_8">8. All disputes arising under the terms and conditions subject to the exclusion jurisdiction of the competent courts in Bayad only.</string>
    <string name="all_terms_9">9. Discount/Offer of My Shopee discount card cannot be clubbed together with any other schemes/offers running in the store.</string>
    <string name="all_terms_10">10. Existing discount of the product or discount under My Shopee discount card whichever is higher would be applicable while shopping.</string>
    <string name="all_terms_11">11. Refund of membership is not allowed in any manner.</string>
    <string name="all_terms_12"> 12. Card Loss - Cardholders must inform My Shopee immediately if they loose or mislay their My Shopee discount card of it is stolen. They shall receive replacement card upon request. Replacement charges may apply to the customer.</string>
    <string name="title_activity_poster_details">Details</string>
    <string name="poster_image">Poster Image</string>
    <string name="address">Address</string>
    <string name="contact_information">Contact information</string>
    <string name="discount_information">Discount Information</string>
    <string name="title_activity_admin_panel">adminPanelActivity</string>
    <string name="mobile_number_text">Enter Contact Number</string>
    <string name="send_otp">Send OTP</string>
    <string name="otp_list">OTP list</string>
</resources>
