<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.TermsAndConditionsActivity"
    android:layout_gravity="center"
    android:background="@drawable/tnc_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/terms_and_conditions"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/activity_horizontal_margin" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/all_terms_1"
            android:textColor="@android:color/black"
            android:layout_marginBottom="2dp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/all_terms_2"
            android:textColor="@android:color/black"
            android:layout_marginBottom="2dp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/all_terms_3"
            android:textColor="@android:color/black"
            android:layout_marginBottom="2dp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/all_terms_4"
            android:textColor="@android:color/black"
            android:layout_marginBottom="2dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/all_terms_5"
            android:textColor="@android:color/black"
            android:layout_marginBottom="2dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/all_terms_6"
            android:textColor="@android:color/black"
            android:layout_marginBottom="2dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/all_terms_7"
            android:textColor="@android:color/black"
            android:layout_marginBottom="2dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/all_terms_8"
            android:textColor="@android:color/black"
            android:layout_marginBottom="2dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/all_terms_9"
            android:textColor="@android:color/black"
            android:layout_marginBottom="2dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/all_terms_10"
            android:textColor="@android:color/black"
            android:layout_marginBottom="2dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/all_terms_11"
            android:textColor="@android:color/black"
            android:layout_marginBottom="2dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/all_terms_12"
            android:textColor="@android:color/black"
            android:layout_marginBottom="32dp" />

    </LinearLayout>

</ScrollView>