<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Activities.propertySellActivity"
    tools:showIn="@layout/activity_property_sell">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/personal_details"
            android:textSize="18sp"
            android:background="@color/sell_feature_color"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>

        <EditText
            android:id="@+id/sell_property_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_hint_pname"
            android:inputType="text"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address_details"
            android:textSize="18sp"
            android:background="@color/sell_feature_color"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>

        <EditText
            android:id="@+id/sell_property_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_hint_address"
            android:inputType="text"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textSize="16sp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"/>

        <EditText
            android:id="@+id/sell_property_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_hint_city"
            android:inputType="text"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textSize="16sp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"/>

        <EditText
            android:id="@+id/sell_property_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_hint_state"
            android:inputType="text"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textSize="16sp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/property_details"
            android:textSize="18sp"
            android:background="@color/sell_feature_color"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>


        <EditText
            android:id="@+id/sell_property_features"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_hint_pfeatures"
            android:inputType="text"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textSize="16sp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/property_for"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:textSize="18sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/sell_property_sell_checkbox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sell"
                    android:textSize="16sp"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"/>

                <CheckBox
                    android:id="@+id/sell_property_rent_checkbox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/rent"
                    android:textSize="16sp"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"/>

            </LinearLayout>

        <EditText
            android:id="@+id/sell_property_sell_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/price_for_sell"
            android:inputType="text"
            android:visibility="gone"
            android:textSize="16sp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"/>


        <EditText
            android:id="@+id/sell_property_rent_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/price_for_rent"
            android:inputType="text"
            android:visibility="gone"
            android:textSize="16sp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/img_text"
                android:textSize="16sp"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:textColor="@color/colorAccent"/>

            <Button
                android:id="@+id/sell_property_image_upload"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:text="@string/btn_p_image"
                android:background="@drawable/rounded_drawable_img_button"
                android:textColor="@color/colorAccent"
                android:layout_weight="1"
                android:textSize="12sp"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/checkbox_tnc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tnc_header"/>

            <TextView
                android:id="@+id/text_view_tnc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/our_terms_and_conditions"
                android:textColor="@android:color/holo_blue_bright"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"/>

        </LinearLayout>

        <Button
            android:id="@+id/sell_property_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:background="@drawable/rounded_login_main_button"
            android:textColor="@android:color/white"
            android:layout_margin="16dp"/>

    </LinearLayout>
    
</ScrollView>